# vestibular_pose

./: .gitignore  README.md  pyproject.toml  requirements.txt  评估指标.md
data/: action_classifier.pkl  action_features.csv  thresholds.json
dataset/: README.md
deploy/: nginx-vestibular.conf.example  vestibular-api.service.example
docs/: 24小时运行说明.md  数据清洗指南.md  服务器部署说明.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CopTrajectory.tsx  Header.css  Header.tsx  MetricTable.css  MetricTable.tsx  RadarChart.tsx  ResultPanel.css  ResultPanel.tsx  SeverityBadge.css  SeverityBadge.tsx  SymmetryChart.tsx  UploadPanel.css  UploadPanel.tsx  VideoPlayer.css  VideoPlayer.tsx
scripts/: batch_test.py  calibrate_spin.py  com.vestibular.website.plist  cut_10s_mid.py  expose_tunnel.sh  organize_and_clean_dataset.sh  preprocess_videos.py  run_api.py  run_auto.py  run_background.sh  run_spin.py  run_ui.py  setup_server.sh  start.sh  stop.sh  stop_background.sh  train_classifier.py  video_trimmer.py
src/vestibular/: config.py
src/vestibular/actions/: context.py  detectors.py  feature_extractor.py  forward_roll.py  head_up_prone.py  jump_in_place.py  labels.py  registry.py  run_straight.py  spin_in_place.py  wheelbarrow_walk.py
src/vestibular/api/: server.py
src/vestibular/features/: joint_angles.py  normalization.py  phase_detection.py  trunk_angle.py  velocity.py
src/vestibular/io/: thresholds.py  video_reader.py
src/vestibular/pipeline/: auto_steps.py  run_auto.py  (+1 more)
tests/: test_smoke.py
(+6 files in other folders)
