[project]
name = "vestibular-pose"
version = "0.1.0"
description = "Pose-based vestibular (sensory integration) training evaluation (YOLO pose + explainable metrics)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ultralytics>=8.0.0",
  "numpy>=1.23,<2",
  "opencv-python>=4.8",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "gradio>=4.0",
  "moviepy>=1.0",
  "scipy>=1.10",
  "fastapi>=0.100",
  "uvicorn>=0.20",
  "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
